Auto stash before merge of "feature/EmployeeLevelView" and "origin/dev"

--- a/resources/lang/vi.json
+++ b/resources/lang/vi.json
@@ -9,5 +9,9 @@
     "Basic Household Allowance": "Trợ cấp nhà ở",
     "Basic Allowance Rate": "Tỷ lệ tăng trợ cấp",
     "Basic Phone Allowance": "Trợ cấp điện thoại",
-    "Basic Response Allowance": "Trợ cấp trách nhiệm"
+    "Basic Response Allowance": "Trợ cấp trách nhiệm",
+
+    "_comment": "General translate",
+    "Create": "Tạo",
+    "Update": "Cập Nhập"
 }
