--- a/resources/lang/vi.json
+++ b/resources/lang/vi.json
@@ -16,5 +16,6 @@
     "Update success": "Cập nhập Thành Công!",
     "Update fail": "Cập nhập Thành Công!",
     "Create": "Tạo",
+    "Create New": "Tạo Mới",
     "Update": "Cập Nhập"
 }
